--- a/training-system/package.json
+++ b/training-system/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "~11.2.1",
     "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.1",
@@ -22,7 +23,10 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "apexcharts": "^3.31.0",
     "bootstrap": "^5.1.3",
+    "ng": "0.0.0",
+    "ng-apexcharts": "^1.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
