--- a/training-system/package.json
+++ b/training-system/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.1.3",
     "ng": "0.0.0",
     "ng-apexcharts": "^1.6.0",
+    "ng2-dragula": "^2.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
